--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 <body>
 <center>
 <h1>Welcome to Edureka</h1>
-<h2>Local fix repository</h2>
+<h2>Local repository</h2>
 <button>save<button>
 </center>
 </body>
